# pyfsd-client

./: .gitignore  README.md  pyproject.toml
src/pyfsd/client/: _version.py
src/src/pyfsd/client/: _version.py
src/twisted/plugins/: pyfsd_client_prompt.py
twisted/plugins/: dropin.cache
